# FlyPath_AP_Project

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml  rust-fmt.yml  test.yml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: channel.rs  comunication.rs  lib.rs  test.rs  ui.rs  worker.rs
crates/client/src/message/: mod.rs  tests.rs
crates/client/src/network/: mod.rs  tests_network_manager.rs  tests_network_state.rs
crates/controller/: Cargo.toml  README.md  main.rs
crates/controller/src/: buttons.rs  controller.rs  controller_handler.rs  controller_ui.rs  drawable.rs  graph.rs  lib.rs  main.rs  messages_view.rs  ui.rs  utility.rs
crates/controller/src/tests/: integration_tests.rs  unit_tests.rs
crates/controller/src/view/: buttons.rs  custon_node.rs  graph.rs  graph_components.rs  messages_view.rs  mod.rs  panel_view.rs  ui.rs
crates/controller/src/view/graph_components/: custom_edge.rs  custom_node.rs
crates/controller/tests/: advanced_tests.rs  integration_tests.rs  unit_tests.rs
crates/initializer/: Cargo.toml
crates/initializer/src/: lib.rs
crates/initializer/src/test_data/: doubleChain1.toml  input1.toml  input10.toml  input11.toml  input12.toml  input13.toml  input2.toml  input4.toml  input5.toml  input6.toml  input7.toml  input8.toml  input9.toml  star1.toml
crates/message/: Cargo.toml
crates/message/src/: lib.rs
crates/server/: Cargo.toml
crates/server/ChatServer/: Cargo.toml
crates/server/ChatServer/src/: lib.rs
crates/server/MediaServer/: Cargo.toml
crates/server/src/: lib.rs  test.rs
crates/server/src/message/: mod.rs
crates/server/src/network/: mod.rs
src/: main.rs
