[package]
name = "FlyPath_AP_Project"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
initializer = { path = "crates/initializer"}


[workspace]
members = [ 
    "crates/initializer",
    "crates/client",
    "crates/message", "crates/server",
    "crates/assets",
    "crates/message",
    "crates/controller"
]
