[package]
name = "FlyPath_AP_Project"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/controller",
    "crates/client",
    "crates/server",
    "crates/message",
    "crates/initializer",
]

[dependencies]
eframe = "0.29.0"
egui = "0.29.0"
crossbeam-channel = "0.5.13"
env_logger = "0.10"
controller = { path = "crates/controller" }
client = { path = "crates/client" }
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" }
initializer = { path="crates/initializer" }

[profile.dev]
opt-level = 3
